--- a/4.html
+++ b/4.html
@@ -18,9 +18,6 @@
 
 
 </ol>
-<h2>권성안 사진</h2>
-<img src="권성안 사진 흰색.jpg" width="300">
-
-
-</body>
-</html>
+<h2>나를 도와준 생활코딩 유튜브</h2>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+<p><input type="checkbox">유익하셨다면 체크해주세요!</p>
