--- a/3.html
+++ b/3.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>권성안 첫 홈페이지</title>
-<meta charst="utf-8">
+<meta charset="utf-8">
+
 </head>
 <body>
 <h1>권성안 홈페이지</h1>
@@ -11,6 +12,11 @@
   <li><a href="1.html">권성안 자기소개</a></li>
   <li><a href="2.html">권성안 사진</a></li>
   <li><a href="3.html">권성안 약력</a></li>
+  <li><a href="4.html">나를 도와준 생활코딩 유튜브</a></li>
+  <li><a href="5.html">댓글</a></li>
+  <li><a href="6.html">채팅</a></li>
+
+
 </ol>
 <h2>권성안 약력</h2>
 <P>신계초등학교 졸업</p>
