--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>권성안 첫 홈페이지</title>
-<meta charst="utf-8">
+<meta charset="utf-8">
 </head>
 <body>
 <h1>권성안 홈페이지</h1>
@@ -11,8 +11,13 @@
   <li><a href="1.html">권성안 자기소개</a></li>
   <li><a href="2.html">권성안 사진</a></li>
   <li><a href="3.html">권성안 약력</a></li>
+  <li><a href="4.html">나를 도와준 생활코딩 유튜브</a></li>
+  <li><a href="5.html">댓글</a></li>
+  <li><a href="6.html">채팅</a></li>
+
+
 </ol>
 <h2>권성안이란?</h2>
-<p>권성안이란 서울시 노원구 초안산로 5길 22 대우아파트 105동 601호에 거주하는 평범한 청년이다.</p>
+<p>권성안은 서울시 노원구 초안산로 5길 22 대우아파트 105동 601호에 거주하는 학생이다.</p>
 </body>
 </html>
